# icS

./: LICENSE  README.md  pyproject.toml
src/IC_7447/: Seven_Seg.ui  bcd_to_seven_seg_converter.py  bcd_to_seven_seg_converter_tb.py
src/gates/: gate_sim_gui_lv1.ui  gates_tb_gui.py
src/ics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/primitives/: gates.py  integrated_circuit.py
src/ttl_74xx_ics/: ttl_74xx_ic.py  ttl_74xx_ics.py  ttl_74xx_ics_tb.py
