# FILE: pyproject.toml


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ics"
version = "2026.1.0"
dependencies = ["pyqt5", "matplotlib"]

[project.scripts]
run-gates-tb = "gates.gates_tb_gui:runner"
run-sev_seg-tb = "IC_7447.bcd_to_seven_seg_converter_tb:runner"
run-ttl_74xx-tb = "ttl_74xx_ics.ttl_74xx_ics_tb:runner"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gates*", "IC_7447*", "primitives*", "ttl_74xx_ics*"]

